ensure on all pages that the background character does not overlap text

--- a/src/assets/css/egapro.css
+++ b/src/assets/css/egapro.css
@@ -63,9 +63,6 @@ body > header p {
   padding-bottom: 120px;
   padding: 1rem 1rem 0 1rem;
   background: transparent url('https://index-egapro.travail.gouv.fr/illustration-email.svg') no-repeat bottom right;
-}
-
-.fulltext .main {
   padding-bottom: 10rem;
 }
 
